edited index and pics

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     </head>
     <body>
         <header>
-            <h1 class="site-heading text-center text-faded d-none d-lg-block">
-                <span class="site-heading-upper text-primary mb-3">A Free Bootstrap Business Theme</span>
-                <span class="site-heading-lower">Business Casual</span>
-            </h1>
+            <div id="title">
+                <h1 class="site-heading text-center text-faded d-none d-lg-block">
+                    <span class="site-heading-upper text-primary mb-3">The Life of</span>
+                    <span class="site-heading-lower">Eric and Jada</span>
+                </h1>
+            </div>
         </header>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
